# OptiHarness

./: .gitignore  AGENTS.md  EXPERIMENT_RESULTS.md  README.md  plan.md  pyproject.toml
configs/: default.yaml  source_memory.example.json
data/locomo/: splits.json
data/longmemeval/: splits_s.json
docs/: EXPERIMENT_INSIGHTS.md  PIPELINE.md
references/: sources.yaml
scripts/: build_source_base_memory.py  evaluate_candidate_json.py  evaluate_generated_candidates.py  fetch_reference_repos.sh  run_claude_optimize.sh  run_memory_locomo.sh  run_tau_banking_benchmark.py
src/memomemo/: __init__.py  bandit.py  baseline.py  benchmark_tasks.py  benchmark_workspaces.py  claude_runner.py  cli.py  dynamic.py  evaluation.py  evolution.py  locomo.py  locomo_optimizer.py  longmemeval.py  longmemeval_optimizer.py  metrics.py  model.py  optimization_cells.py  optimizer.py  pareto.py  post_eval.py  proposer_prompt.py  schemas.py  tau_banking.py  tau_banking_optimizer.py  text_classification.py  text_classification_dynamic.py  text_classification_optimizer.py  text_classification_proposer_prompt.py  upstream.py
src/memomemo/scaffolds/: __init__.py  amem_scaffold.py  base.py  bm25_scaffold.py  mem0_scaffold.py  membank_scaffold.py  memgpt_scaffold.py  no_memory_scaffold.py
src/memomemo/tau_agent_runtime/: __init__.py  base_agent.py
src/memomemo/tau_agents/: __init__.py  banking_knowledge_base_agent.py
src/optiharness/: __init__.py  cli.py
tests/: test_bandit.py  test_baseline.py  test_benchmark_tasks.py  test_claude_runner.py  test_dynamic.py  test_evaluation_cache.py  test_locomo.py  test_longmemeval.py  test_optiharness_alias.py  test_optimizer.py  test_pareto.py  test_post_eval.py  test_proposer_prompt.py  test_scaffolds.py  test_source_scaffolds.py  test_tau_banking.py  test_tau_banking_optimizer.py  test_text_classification.py  test_text_classification_optimizer.py  test_upstream.py
