[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memomemo"
version = "0.1.0"
description = "Clean memory-focused evolution harness for LOCOMO with BM25, A-Mem, and Mem0-style scaffolds."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
external = [
  "rank-bm25>=0.2.2",
  "mem0ai>=0.1.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
memomemo = "memomemo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
